init(#1): Update the code base of Assignment 1.